8th section completed (Fixed: background image and spacing 1st section)
Problem still to fix:
-Fixed header

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ button:hover {
     float: left;
 }
 
+#space {
+    padding-left: 5px;
+}
+
 .container1080 a {
     font-size: 14px;
     font-weight: 400;
@@ -159,14 +163,21 @@ nav a {
 /* START FOURTHSECTION */
 
 .bg-pink {
-    background-color: #FFF2EE;  /* REMEMBER TO ASK ABOUT BACKGROUND */
-    background-image: url('https://www.hubspot.com/cdn2.hubspot.net/hubfs/53/assets/hubspot.com/home/2019/clouds-desktop.svg');
+    background-image: url('../img/bg-case.png');
+    background-position: center;
+    background-size: 2450px;
+    background-repeat: repeat-y;
+
 }
 
 .fourthsection {
-    height: 600px;
+    height: 748px;
     max-width: 1080px;
     margin: 0 auto;
+}
+
+hr {
+    border-bottom: 3px solid #33475C;
 }
 
 .maincontent {
@@ -334,7 +345,7 @@ nav a {
     font-weight: 500;
 }
 
-li:before {
+.fifthsection li:before {
     content: '';
     background: url('https://cdn2.hubspot.net/hubfs/53/assets/hubspot.com/partners/images/Orange_Checkmark.svg') no-repeat;
     width: 18px;
@@ -567,4 +578,103 @@ li:before {
 .rgtbtmcontent img {
     width: 350px;
     float: right;
+}
+
+/* FOOTER */
+
+.bg-darksea {
+    background-color: #33475b;
+}
+
+.container {
+    max-width: 1080px;
+    margin: 0 auto;
+}
+
+.quarter {
+    width: 25%;
+    float: left;
+    padding-top: 100px;
+}
+
+.quarter li:first-child {
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.quarter li {
+    text-transform: capitalize;
+    display: block;
+    color: white;
+    padding: 10px 0;
+    color: #CBD6E2;
+    font-size: 14px;
+}
+
+.quarter li:not(:first-child):hover {
+    color: cyan;
+    cursor: pointer;
+}
+
+.footerbutton button {
+    color: #33475B;
+    font-size: 12px;
+    padding: 9px 16px;
+    margin: 20px 20px 20px 0;
+    border-radius: 5px;
+}
+
+#buttonandicons {
+    height: 450px;
+}
+
+.socialnetworks li {
+    display: inline-block;
+    padding: 0 11px;
+    font-size: 21px;
+}
+
+.socialnetworks li:hover {
+    color: cyan;
+    cursor: pointer;
+}
+
+.bottom-languages {
+    text-align: center;
+    padding: 32px 0px;
+    border-bottom: 1px solid #7C98B6;
+}
+
+.languages li {
+    display: inline-block;
+    color: #CBD6E2;
+    font-size: 16px;
+    padding: 8px 16px;
+}
+
+.endofpage {
+    padding: 32px 0px;
+}
+
+.lftlogo-copyright {
+    float: left;
+}
+
+.legalandprivacy {
+    float: right;
+}
+
+.legalandprivacy li {
+    display: inline-block;
+    color: #CBD6E2;
+    font-size: 16px;
+    padding: 8px 16px;
+    font-weight: 500;
+}
+
+.lftlogo-copyright p {
+    color: #CBD6E2;
+    font-size: 12px;
+    margin: 12px 0px;
 }
